--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "babel": "^6.23.0",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "moment": "^2.24.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-test-renderer": "^16.8.1"
+    "react": "^16.8.1"
   }
 }
