--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.js",
   "author": "Angus Grieve-Smith",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
-    "jest-cli": "^24.1.0",
     "moment": "^2.24.0",
-    "react": "^16.8.1"
+    "react": "^16.8.1",
+    "webpack": "^4.29.3"
+  },
+  "repository": "https://github.com/grvsmth/jest_test.git",
+  "devDependencies": {
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0"
   }
 }
