--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
-    "jest-cli": "^24.1.0",
     "moment": "^2.24.0",
     "react": "^16.8.1"
+  },
+  "devDependencies": {
+    "jest": "^24.1.0",
+    "jest-cli": "^24.1.0"
   }
 }
