--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "jest": "^24.1.0",
-    "jest-cli": "^24.1.0"
+    "jest-cli": "^24.1.0",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
   }
 }
