--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.1"
   },
   "devDependencies": {
+    "babel-loader": "^8.0.5",
     "jest": "^24.1.0",
     "jest-cli": "^24.1.0",
     "webpack": "^4.29.3",
