--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "jest_test",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Jest test",
   "main": "index.js",
+  "type": "module",
   "author": "Angus Grieve-Smith",
   "license": "MIT",
-  "private": true,
+  "scripts": {
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:grvsmth/jest_test.git"
+  },
   "dependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "moment": "^2.24.0",
-    "react": "^16.8.1"
+    "luxon": "^3.3.0"
   },
   "devDependencies": {
-    "babel-loader": "^8.0.5",
-    "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
-    "jest-cli": "^24.1.0",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "jest": "^28.1.3"
   },
-    "jest": {
-        "moduleFileExtensions": ["js", "jsx"],
-        "moduleDirectories": ["node_modules"]
+  "jest": {
+    "testEnvironment": "jest-environment-node",
+    "transform": {},
+    "moduleNameMapper": {
+      "^\\.\\./node_modules/(.+?)/build/es6/(.+?)$": "<rootDir>/node_modules/$1/build/es6/$2"
     }
+  }
 }
